messaging_app/messaging_app/blue_deployment.yaml
version: '1.9'
apiVersion: apps/v1
kind: Deployment
  metadata:
  name: django-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
services:
  name: django-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
