messaging_app/messaging_app/green_deployment.yaml
version: '1.9'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      version: green
  template:
    metadata:
      labels:
        app: django
        version: green
services:
  name: django-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
